# validate_grasping_point

./: CMakeLists.txt  README.md  package.xml
STEFAN/dae/: long_part.STL.dae  short_part.STL.dae
STEFAN/dae/m단위/: bottom.dae  bracket.dae  long_part.dae  middle.dae  pin.dae  short_part.dae  side_part.dae  untitled.dae
STEFAN/grasping_point/: assembly.stl.yaml  assembly_left.stl.yaml  assembly_right.stl.yaml  bottom.stl.yaml  long_part.stl.yaml  middle_part.stl.yaml  short_part.stl.yaml  side_chair.stl.yaml  side_chair_r.stl.yaml
STEFAN/stl/: assembly.stl  assembly_90.stl  f_chair_middle_part.STL  f_long_part.STL  f_side_chair_modi.STL  table.stl
launch/: start.launch
scripts/: TFBroadcaster_whole.py  after_assembly.py  before_assembly.py  dual_arm.py  whole_part.py
